--- a/src/styles/example.scss
+++ b/src/styles/example.scss
@@ -1,8 +1,8 @@
-$color: purple;
-$color2: green;
-//scss variable
+// $color: purple;
+// $color2: green;
+// //scss variable
 
-#main > h1 {
-  border: 4px solid $color;
-  padding: 20px;
-}
+// #main > h1 {
+//   border: 4px solid $color;
+//   padding: 20px;
+// }
