--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,10 @@ body {
   overflow: hidden;
 }
 
+h1 {
+  color: white;
+}
+
 .game-container {
   position: relative;
   width: 240px;
@@ -28,4 +32,86 @@ body {
 
 .game-container canvas {
   image-rendering: pixelated;
+}
+
+#title {
+  background-color: dimgray;
+  // background-color: none;
+  position: relative;
+  display: block;
+  width: 240px;
+  height: 160px;
+  margin: 0 auto;
+  margin-top: 20px;
+  outline: 1px solid white;
+}
+
+#title h1 {
+  color: maroon;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+#instructions {
+  background-color: dimgray;
+  // background-color: none;
+  position: relative;
+  display: none;
+  width: 240px;
+  height: 160px;
+  margin: 0 auto;
+  margin-top: 20px;
+  outline: 1px solid white;
+}
+
+#instructions h1 {
+  color: maroon;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+#win {
+  background-color: dimgray;
+  // background-color: none;
+  position: relative;
+  display: none;
+  width: 240px;
+  height: 160px;
+  margin: 0 auto;
+  margin-top: 20px;
+  outline: 1px solid white;
+
+  transform: scale(1) translateY(-116%);
+  
+}
+
+#win h1 {
+  color: maroon;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+#lose {
+  background-color: dimgray;
+  // background-color: none;
+  position: relative;
+  display: none;
+  width: 240px;
+  height: 160px;
+  margin: 0 auto;
+  margin-top: 20px;
+  outline: 1px solid white;
+
+  transform: scale(1) translateY(-116%);
+
+}
+
+#lose h1 {
+  color: maroon;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
