--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,8 @@ body {
 
 h1 {
   color: white;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 16px;
 }
 
 .game-container {
@@ -31,18 +33,29 @@ h1 {
 }
 
 .game-container canvas {
+  position: fixed;
   image-rendering: pixelated;
 }
+
+// .splash-page {
+//   background-color: dimgray;
+//     // background-color: none;
+//     position: fixed;
+//     display: block;
+//     width: 240px;
+//     height: 160px;
+//     margin: 0 auto;
+//     outline: 1px solid white;
+// }
 
 #title {
   background-color: dimgray;
   // background-color: none;
-  position: relative;
+  position: fixed;
   display: block;
   width: 240px;
   height: 160px;
   margin: 0 auto;
-  margin-top: 20px;
   outline: 1px solid white;
 }
 
@@ -56,12 +69,11 @@ h1 {
 #instructions {
   background-color: dimgray;
   // background-color: none;
-  position: relative;
-  display: none;
+  position: fixed;
+  display: block;
   width: 240px;
   height: 160px;
   margin: 0 auto;
-  margin-top: 20px;
   outline: 1px solid white;
 }
 
@@ -72,6 +84,27 @@ h1 {
   padding: 10px;
 }
 
+#ready {
+  // background-color: dimgray;
+  background-color: none;
+  position: fixed;
+  display: none;
+  width: 240px;
+  height: 160px;
+  margin: 0 auto;
+  outline: 1px solid white;
+}
+
+#ready h1 {
+  color: maroon;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  margin-top: 55px;
+  text-shadow: 2px 2px 4px black;
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+
 #win {
   background-color: dimgray;
   // background-color: none;
@@ -80,11 +113,7 @@ h1 {
   width: 240px;
   height: 160px;
   margin: 0 auto;
-  margin-top: 20px;
   outline: 1px solid white;
-
-  transform: scale(1) translateY(-116%);
-  
 }
 
 #win h1 {
@@ -97,16 +126,12 @@ h1 {
 #lose {
   background-color: dimgray;
   // background-color: none;
-  position: relative;
+  position: fixed;
   display: none;
   width: 240px;
   height: 160px;
   margin: 0 auto;
-  margin-top: 20px;
   outline: 1px solid white;
-
-  transform: scale(1) translateY(-116%);
-
 }
 
 #lose h1 {
