--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,20 @@ body {
 }
 
 .header {
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header h1, .header h4 {
+  margin: 10px;
+} 
+
+.buttons {
   position: relative;
   width: 720px;
   height: 50px;
@@ -32,13 +46,13 @@ body {
   padding: 5px;
 }
 
-h1 {
-  color: white;
-  font-family: 'Press Start 2P', cursive;
-  font-size: 50px;
-  display: flex;
-  justify-content: center;
-}
+// h1 {
+//   color: white;
+//   font-family: 'Press Start 2P', cursive;
+//   font-size: 50px;
+//   display: flex;
+//   justify-content: center;
+// }
 
 .mute-btn {
   background-color: white;
